added map & logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Velu Builders</title>
 
         <!-- Favicon -->
-    <link href="assets/images/mini-logo.png" rel="icon">
+    <link href="assets/images/VB-Logo.png" rel="icon">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <nav class="navbar">
             <div class="container nav-flex">
                 <div class="logo">
-                    <img src="assets/images/logo-1.png" alt="VB Logo">
+                    <img src="assets/images/VB-Logo1.png" alt="VB Logo">
                 </div>
 
                 <div class="hamburger">
@@ -612,6 +612,37 @@
         </div>
     </section>
 
+   <!-- Map Section -->
+
+    <section id="map-section" class="section-padding">
+        <div class="container">
+            <div class="center-header text-center" style="margin-bottom: 40px;">
+                <h4 class="sub-heading">Location</h4>
+                <h2 class="section-heading">Visit Our Office</h2>
+            </div>
+            
+<div class="map-wrapper">
+                <iframe 
+                    width="100%" 
+                    height="100%" 
+                    id="gmap_canvas" 
+                    src="https://maps.google.com/maps?q=Coimbatore&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                    frameborder="0" 
+                    scrolling="no" 
+                    marginheight="0" 
+                    marginwidth="0">
+                </iframe>
+            </div>
+
+            <div class="map-actions" style="text-align: center; margin-top: 30px;">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=Coimbatore" 
+                   target="_blank" 
+                   class="btn-gold-solidd">
+                   Get Directions on Google Maps &rarr;
+                </a>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="main-footer" id="footer">
